--- a/src/app/modules/home/components/save-gold-scheme/sgs-users/sgs-users.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/sgs-users/sgs-users.component.html
@@ -1,23 +1,23 @@
 <app-outlet-container>
     <app-master-container>
         <ng-container header>
-             Users
+             {{ currentUser.userType===1?'Users':(currentUser.userType===3?'My Promoters':'My Scheme Members')}}
         </ng-container>
         <ng-container icons>
-            <button mat-icon-button >
+            <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
                 <i class="las la-file-excel"></i>
             </button>
             <!-- <button mat-icon-button >
                 <i class="las la-file-pdf"></i>
             </button> -->
-            <button *ngIf="selectedUserType>-1" mat-icon-button (click)="addUsers()">
+            <button *ngIf="selectedUserType>-1 && enableAddButton" mat-icon-button (click)="addUsers()">
                 <i class="las la-plus"></i>
             </button>
         </ng-container>
         <ng-container body>
             <div fxLayout="column" fxFlex="100">
                 <div fxLayout="row" fxLayoutGap="1rem">
-                    <mat-form-field>
+                    <mat-form-field *ngIf="currentUser.userType===1">
                         <mat-label>Select User Type</mat-label>
                         <mat-select [(ngModel)]="selectedUserType">
                             <mat-option 
