--- a/src/app/sgs-components/sgs-table/sgs-table.component.html
+++ b/src/app/sgs-components/sgs-table/sgs-table.component.html
@@ -36,6 +36,8 @@
                                     {{ element[column.key] }}
                                 </a>
                                 <button
+                                    class="mat-raised-button mat-primary"
+                                    type="button"
                                     (click)="_clickCell.emit({ key: column.key, data: element })"
                                     *ngSwitchCase="ColumnType.button"
                                     mat-button
