--- a/src/app/modules/home/components/save-gold-scheme/sgs-edit-forms/sgs-edit-forms.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/sgs-edit-forms/sgs-edit-forms.component.html
@@ -90,142 +90,64 @@
     </form>
 </ng-container>
 <ng-container *ngIf="data.type==='users'">
-    <div  fxLayout="column" fxLayoutGap="0.3rem">
-        <!-- <form  [formGroup]="updateUserForm" >
-            <ng-container *ngIf="data.type===1">
-                <mat-form-field>
-                    <mat-label>User ID</mat-label>
-                    <input matInput formControlName="userId" placeholder="User ID" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>Introduced By</mat-label>
-                    <input matInput formControlName="introducedBy" placeholder="Introduced By" />
-                </mat-form-field>
-                
-                <mat-form-field>
-                    <mat-label>Selected Scheme</mat-label>
-                    <mat-select formControlName="schemeType">
-                        <mat-option *ngFor="let country of schemes; let i = index" [value]="country.id">{{
-                            country.name
-                        }}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>First Name</mat-label>
-                    <input matInput formControlName="firstName" placeholder="First Name" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>Last Name</mat-label>
-                    <input matInput formControlName="lastName" placeholder="Last Name" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>Email ID</mat-label>
-                    <input matInput formControlName="email" placeholder="Email ID" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>Mobile Number</mat-label>
-                    <input matInput formControlName="mobilePhone" placeholder="Mobile Number" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>Aadhar Number</mat-label>
-                    <input matInput formControlName="aadhar" placeholder="Aadhar Number" />
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>PAN Number</mat-label>
-                    <input matInput formControlName="pan" placeholder="PAN Number" />
-                </mat-form-field>
-                <div fxLayout="row" *ngIf="data.mode !== DECISION.VIEW">
-                    <button
-                        class="mat-raised-button mat-primary"
-                        type="submit"
-                        [disabled]="updateUserForm.invalid"
-                        mat-stroked-button
-                        color="primary"
-                        (click)="okToEdit('VERIFY')"
-                    >
-                        Confirm
-                    </button>
-                </div>
-            </ng-container>
-        </form> -->
-        <!-- Update Settings  -->
-        <!-- <ng-container *ngIf="data.type===2">
+    <form  [formGroup]="updateUserForm" >
+        <div  fxLayout="column" fxLayoutGap="0.3rem">
+            <mat-form-field>
+                <mat-label>First Name</mat-label>
+                <input matInput formControlName="firstName" placeholder="First Name" />
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Last Name</mat-label>
+                <input matInput formControlName="lastName" placeholder="Last Name" />
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Password</mat-label>
+                <input type="password" matInput formControlName="password" placeholder="Password" />
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Mobile Number</mat-label>
+                <input matInput formControlName="mobilePhone" placeholder="Mobile Number" />
+            </mat-form-field>
+            <div fxLayout="row">
+                <button
+                    class="mat-raised-button mat-primary"
+                    type="submit"
+                    [disabled]="updateUserForm.invalid"
+                    mat-stroked-button
+                    color="primary"
+                    (click)="submitUserForm()"
+                >
+                Update
+                </button>
+            </div>
+        </div> 
+    </form> 
+</ng-container>
+<ng-container *ngIf="data.type==='settings'">
+    <form  [formGroup]="updateSettingsForm" >
+        <div  fxLayout="column" fxLayoutGap="0.3rem">
             <mat-form-field>
                 <mat-label>Individual Commission</mat-label>
-                <input matInput formControlName="individualCommission" placeholder="Individual Commission %" />
+                <input matInput formControlName="individual_commission" placeholder="Individual Commission %" />
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Group Commission</mat-label>
-                <input matInput formControlName="groupCommission" placeholder="Group Commission %" />
-            </mat-form-field>
-        </ng-container> -->
-        
-        <!-- Update Individual scheme  -->
-        <!-- <ng-container *ngIf="data.type===3">
-            <mat-form-field>
-                <mat-label>Amount</mat-label>
-                <input matInput formControlName="individualAmount" placeholder="Amount" />
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label>No of Months</mat-label>
-                <input matInput formControlName="individualMonths" placeholder="No of Months" />
-            </mat-form-field>
-        </ng-container> -->
-
-        
-        <!-- Update Group scheme  -->
-        <!-- <ng-container *ngIf="data.type===4">
-            <mat-form-field>
-                <mat-label>Total Amount</mat-label>
-                <input matInput formControlName="groupTotalAmount" placeholder="Total Amount" />
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label>No of Months</mat-label>
-                <input matInput formControlName="groupMonths" placeholder="No of Months" />
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label>Amount Per Month</mat-label>
-                <input matInput formControlName="groupAmountPerMonth" placeholder="Amount Per Month" />
-            </mat-form-field>
-        </ng-container> -->
-        <!-- Client Payment -->
-        <!-- <ng-container *ngIf="data.type===5">
-            <div fxLayout="row wrap" fxLayoutGap="2rem">
-                <app-label-value 
-                    *ngIf="data.data?.individualAmount"
-                    [label]="'Amount'"
-                    [value]="''+(data.data.individualAmount  | number: '1.2-4')"
-                ></app-label-value>
-                <app-label-value 
-                    *ngIf="data.data?.individualMonthToPay"
-                    [label]="'Paying Month'"
-                    [value]="data.data.individualMonthToPay"
-                ></app-label-value>
-                <app-label-value 
-                    *ngIf="data.data?.groupAmount"
-                    [label]="'Amount'"
-                    [value]="''+(data.data.groupAmount  | number: '1.2-4')"
-                ></app-label-value>
-                <app-label-value 
-                    *ngIf="data.data?.groupMonthToPay"
-                    [label]="'Paying Month'"
-                    [value]="data.data.groupMonthToPay"
-                ></app-label-value>
-            </div>
-            <img src="assets/images/qr-code.png" class="qr-code"/>
-        </ng-container> -->
-        <!-- <div fxLayout="row" *ngIf="data.mode !== DECISION.VIEW">
-            <button
-                class="mat-raised-button mat-primary"
-                type="submit"
-                [disabled]="updateUserForm.invalid"
-                mat-stroked-button
-                color="primary"
-                (click)="okToEdit('VERIFY')"
-            >
-                Confirm
-            </button>
-        </div> -->
-    </div>
+                <input matInput formControlName="group_commission" placeholder="Group Commission %" />
+            </mat-form-field>            
+            <div fxLayout="row">
+                <button
+                    class="mat-raised-button mat-primary"
+                    type="submit"
+                    [disabled]="updateSettingsForm.invalid"
+                    mat-stroked-button
+                    color="primary"
+                    (click)="submitSettingsForm()"
+                >
+                Update
+                </button>
+            </div> 
+        </div> 
+    </form> 
 </ng-container>
+
 
