--- a/src/app/modules/home/components/save-gold-scheme/sgs-refferals/sgs-refferals.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/sgs-refferals/sgs-refferals.component.html
@@ -6,12 +6,12 @@
                 <mat-tab-group class="form-tabs">
                     <mat-tab label="Individual">
                         <ng-template matTabContent>
-                            <app-sgs-scheme-individual [type]="'referrals'"></app-sgs-scheme-individual>
+                            <app-sgs-scheme-individual [schemesConfig]="schemesConfig"></app-sgs-scheme-individual>
                         </ng-template>
                     </mat-tab>
                     <mat-tab label="Group">
                         <ng-template matTabContent>
-                            <app-sgs-scheme-group  [type]="'referrals'"></app-sgs-scheme-group>
+                            <app-sgs-scheme-group  [schemesConfig]="schemesConfig"></app-sgs-scheme-group>
                         </ng-template>
                     </mat-tab>
                 </mat-tab-group>
