--- a/src/app/modules/authentication/components/login/login.component.html
+++ b/src/app/modules/authentication/components/login/login.component.html
@@ -30,8 +30,8 @@
                 </mat-form-field>
                 <div fxFlex fxLayoutAlign="end" class="reset-password">
                     <span class="login-forgotpass-link" (click)="onForgotPasswordClick()">Forgot Password?</span>
-                    <span class="login-forgotpass-link">| </span>
-                    <span class="login-forgotpass-link" (click)="onUnlockPasswordClick()">Unlock User?</span>
+                    <!-- <span class="login-forgotpass-link">| </span> -->
+                    <!-- <span class="login-forgotpass-link" (click)="onUnlockPasswordClick()">Unlock User?</span> -->
                 </div>
                 <div class="login-btn">
                     <button
