--- a/src/app/modules/home/components/side-menu/side-menu.component.html
+++ b/src/app/modules/home/components/side-menu/side-menu.component.html
@@ -25,7 +25,7 @@
                     <div flex="20" class="menu-icon">
                         <i [ngClass]="menuItem.icon"></i>
                     </div>
-                    <div flex="80" class="menu-heading" translate="ACC_MNGMT">{{ menuItem.name }}</div>
+                    <div flex="80" class="menu-heading upperCase" >{{ menuItem.name }}</div>
                 </div>
             </ng-container>
         </div>
